--- a/gp4.htm
+++ b/gp4.htm
@@ -32,8 +32,9 @@ var sv = getParam("sv");
 </head>
 <body itemscope="itemscope" itemtype="http://schema.org/Product" style="margin: 0 !important; overflow: hidden;">
 <div id='player'  style="width:100%;height:100%"></div>
-<div style="background:#ccc;" id="player"></div>
 
+<div id="player">
+</div>
 <script type="7fd48e4e9b637a138f663eba-text/javascript">
 
 var playerElement = document.getElementById("player");
