--- a/gp4.html
+++ b/gp4.html
@@ -1,16 +1,6 @@
 ﻿<html>
 <head>
-<script type="7fd48e4e9b637a138f663eba-text/javascript">
-function getParam ( sname )
-{
-  var params = location.search.substr(location.search.indexOf("?")+1);
-  var sval =  params.replace("sv=", "");
-  
-  return sval;
-}
-var sv = getParam("sv");
 
-</script>
 
 <script src="http://www.elahmad.com/js/jquery/jquery-1.8.3.min.js"></script>
 <script src="http://www.elahmad.com/tv/embed/clappr/dist/clappr.min.js?v=0.3.12"></script>
@@ -26,10 +16,23 @@ var sv = getParam("sv");
 
 
 </head>
-<body itemscope="itemscope" itemtype="http://schema.org/Product" style="margin: 0 !important; overflow: hidden;">
-<div id='player'  style="width:100%;height:100%"></div>
-<div style="background:#ccc;" id="player"></div>
+<script async src='https://raw.githack.com/cdn-cgi/bm/cv/2172558837/api.js'></script>
+<script type="24bca589bec8cac72b32afb5-text/javascript">
+function getParam ( sname )
+{
+  var params = location.search.substr(location.search.indexOf("?")+1);
+  var sval =  params.replace("sv=", "");
+  
+  return sval;
+}
+var sv = getParam("sv");
 
+</script>
+<body style="margin:0;background:#000;">
+<div id="iframeDiv" style="width: 100%;">
+<div id="player"></div>
+<a href="#" id="frameDummy"></a>
+</div>
 <script type="7fd48e4e9b637a138f663eba-text/javascript">
 
 var playerElement = document.getElementById("player");
