--- a/gp4.html
+++ b/gp4.html
@@ -1,20 +1,7 @@
-﻿<html>
+﻿
+<html>
 <head>
-
-
-<script src="http://www.elahmad.com/js/jquery/jquery-1.8.3.min.js"></script>
-<script src="http://www.elahmad.com/tv/embed/clappr/dist/clappr.min.js?v=0.3.12"></script>
-<script src="http://www.elahmad.com/tv/embed/clappr/dist/level-selector.min.js?v=2.5.5"></script>
-<script src="http://www.elahmad.com/tv/embed/clappr/dist/dash-shaka-playback.min.js?v=2.5.0"></script>
-<script src="http://www.elahmad.com/tv/embed/clappr/dist/clappr-chromecast-plugin.min.js"></script>
-<script src="http://www.elahmad.com/tv/embed/clappr/dist/rtmp.min.js"></script>
-<script src="http://www.elahmad.com/tv/embed/clappr/dist/clappr-pip.min.js?v=0.2.0"></script>
-<script src="http://www.elahmad.com/js/MobileDetect.js"></script>
-<script src="http://www.elahmad.com/js/clipboard.min.js"></script>
-<script async src='https://raw.githack.com/cdn-cgi/bm/cv/2172558837/api.js'></script>
-</head>
-<script async src='https://raw.githack.com/cdn-cgi/bm/cv/2172558837/api.js'></script>
-<script type="24bca589bec8cac72b32afb5-text/javascript">
+<script type="7fd48e4e9b637a138f663eba-text/javascript">
 function getParam ( sname )
 {
   var params = location.search.substr(location.search.indexOf("?")+1);
@@ -25,11 +12,24 @@ function getParam ( sname )
 var sv = getParam("sv");
 
 </script>
-<body style="margin:0;background:#000;">
+
+<script src="http://www.elahmad.com/tv/embed/clappr/dist/clappr.min.js?v=0.3.12"></script>
+<script src="http://www.elahmad.com/tv/embed/clappr/dist/level-selector.min.js?v=2.5.5"></script>
+<script src="http://www.elahmad.com/tv/embed/clappr/dist/dash-shaka-playback.min.js?v=2.5.0"></script>
+<script src="http://www.elahmad.com/tv/embed/clappr/dist/clappr-chromecast-plugin.min.js"></script>
+<script src="http://www.elahmad.com/tv/embed/clappr/dist/rtmp.min.js"></script>
+<script src="http://www.elahmad.com/tv/embed/clappr/dist/clappr-pip.min.js?v=0.2.0"></script>
+<script src="http://www.elahmad.com/js/MobileDetect.js"></script>
+<script src="http://www.elahmad.com/js/clipboard.min.js"></script>
+<script src="http://www.elahmad.com/js/jquery/jquery-1.8.3.min.js"></script>
+</head>
+
+
+<body style="background: #000; margin: 0;">
 <div id="iframeDiv" style="width: 100%;">
-<div id="player"></div>
-<a href="#" id="frameDummy"></a>
+<div id="player">
 </div>
+
 <script type="7fd48e4e9b637a138f663eba-text/javascript">
 
 var playerElement = document.getElementById("player");
@@ -54,7 +54,6 @@ player.attachTo(playerElement);
 player.load({ source: sv, mimeType: 'application/vnd.apple.mpegurl'});
 player.play();
 </script>
-
 
 <style type="text/css">
 *{margin:0;padding:0;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:-moz-none;-o-user-select:none;user-select:none}html,body{height:100%;width:100%;padding:0;margin:0;overflow:hidden}#div_player{background:#000;height:100%;margin:0;overflow:hidden;padding:0}.videoCentered{width:100%;height:100%;display:block}.jw-rightclick .jw-featured{display:none}
@@ -82,7 +81,7 @@ body {
     text-align: center;
     font-family:Changa,"Segoe UI";
     font-weight: bold;
-content: " http://elgawad-tv.tk | موقع الجواد تي في ";
+content: "موقع الجواد تي في | http://elgawad-tv.tk  ";
 }
 
 .media-control[data-media-control] .media-control-background[data-background] {
@@ -96,16 +95,13 @@ content: " http://elgawad-tv.tk | موقع الجواد تي في ";
 .container[data-container] span{display:none}
 </style>
 
-<script data-cf-settings="7fd48e4e9b637a138f663eba-|49" defer="" src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js"></script>
-
-
 <span style="background: transparent; box-sizing: border-box; color: white; font-size: 10px; font-weight: bold; height: 25px; padding: 0px 5px; position: absolute; right: 60px; top: 400px; width: 90px;"></span>
 <img pagespeed_url_hash="b8e6b5a44e2403b" src="https://4.bp.blogspot.com/-sFSJEUuP3Mk/Xsgn8tTzeUI/AAAAAAAAI74/1-2cWuB6lEQHfurX7_3APszuU8Reg9aLACK4BGAYYCw/s1600/logo1.png" style="border: none; box-sizing: border-box; height: 30px; padding: 0px; position: absolute; right: 15px; top: 20px; vertical-align: middle; width: 90px;" />
 
 <script>$(function(){$("#select_player").on("change",function(){var a=$(this).val();if(a){window.location=a}return false});$(document).mousemove(function(){$("#selyer").show();$("#selyer").delay(3600).fadeOut()});$(document).hover(function(){$("#selyer").show();$("#selyer").delay(3600).fadeOut()},function(){$("#selyer").fadeOut()});setTimeout(function(){$("#selyer").fadeOut()},2000)});</script>
 
+<script data-cf-settings="7fd48e4e9b637a138f663eba-|49" defer="" src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js"></script>
 
 </body>
 </html>
-
 
