--- a/gp4.html
+++ b/gp4.html
@@ -25,7 +25,7 @@ var sv = getParam("sv");
 </head>
 
 
-<body style="background: #000; margin: 0;">
+<body>
 <div id="iframeDiv" style="width: 100%;">
 <div id="player">
 </div>
